--- a/Homework/Week_4/scatter.css
+++ b/Homework/Week_4/scatter.css
@@ -4,10 +4,10 @@ Data Processing, week 4
 scatter.js  */
 
 <style>
-{
-  font: 10px sans-serif;
+.axis text {
+  font-family: sans-serif;
+  font-size: 11px;
 }
-
 .axis path,
 .axis line {
   fill: none;
